--- a/DataBindingEsRouting/src/app/app.component.html
+++ b/DataBindingEsRouting/src/app/app.component.html
@@ -1,5 +1,8 @@
-<button class="btn btn-primary">Klikkelj ide</button>
-
+<nav>
+  <a class="btn btn-primary m-2" routerLink="/minta">Minta</a>
+  <a class="btn btn-success m-2" routerLink="/feladat">Feladat</a>
+  <a class="btn btn-danger m-2" routerLink="/notfound">404</a>
+</nav>
 
 
 
