--- a/DataBindingEsRouting/src/app/app.component.html
+++ b/DataBindingEsRouting/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
   <a class="btn btn-primary m-2" routerLink="/minta">Minta</a>
   <a class="btn btn-success m-2" routerLink="/feladat">Feladat</a>
+  <a class="btn btn-success m-2" routerLink="/pipes">Pipe-ok</a>
   <a class="btn btn-danger m-2" routerLink="/notfound">404</a>
 </nav>
 
