--- a/HasznosFunkciok/src/app/app.component.html
+++ b/HasznosFunkciok/src/app/app.component.html
@@ -5,6 +5,7 @@
     <div class="dropdown-menu" aria-labelledby="legorduloMenuGomb" aria-expanded="false">
       <a class="dropdown-item" routerLink="/jquery">JQuery minta</a>
       <a class="dropdown-item" routerLink="/tabla">Táblázat minta</a>
+      <a class="dropdown-item" routerLink="/eletciklus">Elemek életciklusának tesztelése</a>
       <a class="dropdown-item" href="https://angular.io/" target="_blank">Angular honlapja</a>
     </div>
 
